# latke

./: .gitignore  BlockingQueue.h  CMakeLists.txt  README.md  latke_config.h.cmake.in  latke_test.cl  latke_test.cpp  latke_test.h
cmake/: FindOpenCL.cmake
src/: ArchAMD.h  ArchFactory.cpp  ArchFactory.h  ArchINTL.h  ArchNVD.h  ArchXILINX.h  DeviceManagerOCL.cpp  DeviceManagerOCL.h  DeviceOCL.cpp  DeviceOCL.h  DualBufferOCL.cpp  DualBufferOCL.h  DualImageOCL.cpp  DualImageOCL.h  EnqueueInfoOCL.cpp  EnqueueInfoOCL.h  IArch.h  IDualMemOCL.h  KernelOCL.cpp  KernelOCL.h  QueueOCL.cpp  QueueOCL.h  RunInfoOCL.cpp  RunInfoOCL.h  UtilOCL.cpp  UtilOCL.h  latke.h  latke_config.h  platform.cl  platform.h
tests/: ThreadPool.h  common.cl  debayer.cl  debayer.cpp  debayer.h  debayerBuffer.cpp  debayerImage.cpp  image.cl  simple.cl  simple.cpp
tests/debayer/: debayer.cpp  debayer.h  debayerBuffer.cl  debayerBuffer.cpp  debayerImage.cl  debayerImage.cpp  image.cl
tests/include/: BlockingQueue.h  common.h
tests/wide_vadd/: XRT_README.md  connectivity_u250.cfg  wide_vadd.cpp  wide_vadd_main.cpp  xrt.ini
